--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -150,6 +150,15 @@
                 android:layout_height="wrap_content"
                 android:text="อ่านการ์ด"
                 android:layout_marginTop="8dp" />
+                
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/switch_floating_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="แสดงปุ่มลอยตลอดเวลา"
+                android:textStyle="bold"
+                android:layout_marginTop="8dp"
+                android:checked="false" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
