--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -159,6 +159,15 @@
                 android:textStyle="bold"
                 android:layout_marginTop="8dp"
                 android:checked="false" />
+                
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/switch_background_mode"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="ทำงานในพื้นหลัง"
+                android:textStyle="bold"
+                android:layout_marginTop="8dp"
+                android:checked="false" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
